# OmniMind-AI

./: .env.example  CHANGES.md  INTEGRATION_SUMMARY.md  LLM_COUNCIL_ARCHITECTURE.md  LLM_COUNCIL_README.md  QUICK_START.md  README.md  SKILL.md  docker-compose.yml  frontend-setup.bat  frontend-setup.sh  package-lock.json  package.json  requirements.txt  setup-backend.bat  start-backend.bat  start-backend.sh  start-council.sh  start-frontend.bat  start-frontend.sh  start-full-system.bat  start-full-system.sh  troubleshoot.bat  troubleshoot.sh  vercel.json
backend/: Dockerfile  main.py  omnimind.db  requirements.docker.txt  seed_knowledge.py  test_council.py
backend/app/: __init__.py
decision-intelligence-platform/: README.md  turbo.json
decision-intelligence-platform-1/: package.json  pnpm-workspace.yaml
decision-intelligence-platform-1/apps/api/: README.md  pyproject.toml
decision-intelligence-platform-1/apps/api/app/core/: config.py
decision-intelligence-platform-1/apps/api/app/schemas/: index.py
decision-intelligence-platform-1/apps/api/app/services/: orchestrator.py
decision-intelligence-platform/services/agent-engine/: README.md  pyproject.toml
decision-intelligence-platform/services/agent-engine/app/: main.py
decision-intelligence-platform/services/agent-engine/app/graphs/: decision_graph.py
decision-intelligence-platform/services/agent-engine/app/models/: llama.py
docs/: architecture.md  getting-started.md
frontend/: Dockerfile  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
(+134 files in other folders)
