[tool]
name = "decision-intelligence-platform-api"
version = "0.1.0"
description = "API for the Decision Intelligence Platform"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
langgraph = "^0.1.0"
qdrant-client = "^0.9.0"
sentence-transformers = "^2.2.0"
asyncpg = "^0.25.0"
redis = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.910"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"