[tool]
name = "agent-engine"
version = "0.1.0"
description = "Multi-agent decision intelligence platform engine"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
langgraph = "^0.1.0"
llama = "^3.1.0"
qdrant-client = "^0.9.0"
sentence-transformers = "^2.2.0"
pydantic = "^1.10.0"
redis = "^4.0.0"
sqlalchemy = "^1.4.0"
asyncpg = "^0.25.0"